--- a/aplicaciones.html
+++ b/aplicaciones.html
@@ -110,6 +110,65 @@
                 </div></a>
             </div>
         </div>
+        <div class="ver_worldid">
+            <h2 class="app_title">Usar el token Worldcoin</h2>
+            <p class="worldid_subtitle">Carteras, intercambios y otras aplicaciones compatibles con el token Worldcoin</p>
+            <div class="worldid_cards">
+                <a href="" class="card_link"><div class="small_card">
+                    <div class="card_head"><img src="./../assets/images/Uniswap_icon.svg" alt="" class="small_img">
+                    <strong>Uniswap</strong></div>
+                    <p class="smallcard_txt">Intercambio descentralizado</p>
+                </div></a>
+                <a href="" class="card_link"><div class="small_card">
+                    <div class="card_head"><img src="./../assets/images/Ramp Network_icon.svg" alt="" class="small_img">
+                    <strong>Ramp Network</strong></div>
+                    <p class="smallcard_txt">Depósito y retiro como servicio</p>
+                </div></a>
+                <a href="" class="card_link"><div class="small_card">
+                    <div class="card_head"><img src="./../assets/images/Gate.io_icon.svg" alt="" class="small_img">
+                    <strong>Gate.io</strong></div>
+                    <p class="smallcard_txt">Intercambio centralizado</p>
+                </div></a>
+                <a href="" class="card_link"><div class="small_card">
+                    <div class="card_head"><img src="./../assets/images/Binance_icon.svg" alt="" class="small_img">
+                    <strong>Binance</strong></div>
+                    <p class="smallcard_txt">Intercambio centralizado</p>
+                </div></a>
+                <a href="" class="card_link"><div class="small_card">
+                    <div class="card_head"><img src="./../assets/images/Bitgo_icon.svg" alt="" class="small_img">
+                    <strong>Bitgo</strong></div>
+                    <p class="smallcard_txt">Software de criptomonedas institucionales</p>
+                </div></a>
+                <a href="" class="card_link"><div class="small_card">
+                    <div class="card_head"><img src="./../assets/images/HTX_icon.svg" alt="" class="small_img">
+                    <strong>HTX</strong></div>
+                    <p class="smallcard_txt">Intercambio centralizado</p>
+                </div></a>
+                <a href="" class="card_link"><div class="small_card">
+                    <div class="card_head"><img src="./../assets/images/Moonpay_icon.svg" alt="" class="small_img">
+                    <strong>Moonpay</strong></div>
+                    <p class="smallcard_txt">Despósito y retiro como servicio</p>
+                </div></a>
+                <a href="" class="card_link"><div class="small_card">
+                    <div class="card_head"><img src="./../assets/images/Pagolinea_icon.svg" alt="" class="small_img">
+                    <strong>Pagolinea</strong></div>
+                    <p class="smallcard_txt">Despósito y retiro como servicio</p>
+                </div></a>
+                <a href="" class="card_link"><div class="small_card">
+                    <div class="card_head"><img src="./../assets/images/Kucoin_icon.svg" alt="" class="small_img">
+                    <strong>Kucoin</strong></div>
+                    <p class="smallcard_txt">Intercambio centralizado</p>
+                </div></a>
+            </div>
+        </div>
+        <div class="create">
+            <h2 class="create_h2">Crea aplicaciones de Worldcoin</h2>
+            <p class="create_txt">¿Tiene ideas en las que la tecnología de World ID sea útil? Comunícanoslo y le echaremos un vistazo lo antes posible</p>
+            <div class="create_buttons">
+                <a href="" class="button">Empieza a crear<i class="fa-solid fa-arrow-right"></i></a>
+                <a href="" class="button2">Añade tu aplicación a la lista <i class="fa-regular fa-clone"></i></a>
+            </div>
+        </div>
     </main>
     <footer class="footer">
         <div class="footer_upcontainer">
